[package]
name = "fast"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.0", features = ["napi4"] }
napi-derive = "2.14.0"
fastbloom = "0.16.0"
rayon = "1.10"

[build-dependencies]
napi-build = "2.0.1"

[dev-dependencies]
criterion = "0.8.2"
